<resources>
    <string name="cign_app_name">CIBN开播</string>


    <string name="live_list_title">直播列表</string>
    <string name="no_more">没有更多了</string>

    <string name="goods_detail_title">商品</string>
    <string name="goods_list_title">直播间商品(%d)</string>
    <string name="goods_price_sign">¥</string>
    <string name="goods_num">库存：%d</string>

    <string name="guide_up">遥控按下上键播放上一个直播</string>
    <string name="guide_down">遥控按下下键播放下一个直播</string>
    <string name="guide_left">遥控按下左键弹出直播列表</string>
    <string name="guide_right">遥控按下右键弹出直播间商品</string>

    <string name="anchor_certification_no">主播认证编号</string>

    <string name="sdk_loading">努力加载中，精彩马上开始</string>
    <string name="shop_qrcode">微信扫码进入店铺下单</string>

    <string name="live_not_found">这个直播间已经结束，自动为你跳转其他直播间</string>
    <string name="no_network">连接失败，请检查您的网络设置</string>

    <string name="search">搜索</string>
    <string name="recommend">推荐</string>
    <string name="follow">关注</string>
    <string name="me">我的</string>
    <string name="relative_recommend">相关推荐</string>

    <string name="cancel_follow">取消关注</string>
    <string name="like">点赞</string>
    <string name="cancel_like">取消点赞</string>
    <string name="follow_success">关注成功</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="like_success">点赞成功</string>
    <string name="unlike_success">取消点赞成功</string>

    <string name="search_history">历史搜索</string>
    <string name="search_guess">猜你想搜</string>

    <string name="login_tip">微信扫一扫，立即登录</string>
    <string name="logout">退出</string>
    <string name="history_record">历史记录</string>
    <string name="my_orders">我的订单</string>
    <string name="order_need_pay">待付款</string>
    <string name="order_need_send">待发货</string>
    <string name="order_need_receive">待收货</string>
    <string name="order_finished">已完成</string>
    <string name="order_service">售后</string>
    <string name="other_function">其他功能</string>
    <string name="settings">设置</string>

    <string name="go_home">回到首页</string>
    <string name="my_follow">我的关注</string>
    <string name="anchor_video_list_title">主播视频列表(%d)</string>
    
    <string name="check_update">检查升级</string>
    <string name="feedback">意见反馈</string>
    <string name="problems">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="check_network">网络诊断</string>
    <string name="submit_success">提交成功</string>

    <string name="network_checking">正在检查……</string>
    <string name="network_wifi_ok">WIFI连接正常</string>
    <string name="network_wifi_fail">WIFI连接异常</string>

    <string name="safety_certification">安全认证</string>
    <string name="remote_control">遥控器</string>
    <string name="update_now">立即更新</string>
    <string name="history_versions">历史版本</string>
    <string name="clear_cache">清理缓存</string>
    <string name="update_detail">更新日志：</string>

    <string name="login_to_view_more">登录后可以查看更多</string>
    <string name="hd_play">高清播放</string>
    <string name="easy_op">操作简单</string>
    <string name="selected_goods">精选商品</string>
    <string name="pay_security">支付安全</string>
    <string name="follow_list_title">关注列表(%d)</string>
</resources>