<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/drawer_orders"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF16171B"
        android:focusable="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_orders_home_menu"
            android:layout_width="@dimen/drawer_menu_width"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <cn.cibn.kaibo.ui.widget.MenuItemView
                android:id="@+id/btn_go_home"
                android:layout_width="@dimen/dp_84"
                android:layout_height="@dimen/dp_28"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_menu_item_search_selector"
                app:font_size="@dimen/sp_9"
                app:icon_padding="@dimen/dp_3"
                app:icon_size="@dimen/dp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu_icon="@drawable/home"
                app:menu_name="@string/go_home"
                app:name_color="@color/common_white_transparent_60" />

            <cn.cibn.kaibo.ui.widget.MyVerticalGridView
                android:id="@+id/recycler_order_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:focusOutFront="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_go_home"/>

            <Button
                android:id="@+id/btn_page_need_pay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/bg_recyclerview_item"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/dp_25"
                android:text="@string/order_need_pay"
                android:visibility="gone"
                android:textColor="@color/common_white_transparent_80"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_go_home" />

            <Button
                android:id="@+id/btn_page_need_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/bg_recyclerview_item"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/dp_25"
                android:text="@string/order_need_send"
                android:visibility="gone"
                android:textColor="@color/common_white_transparent_80"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_page_need_pay" />

            <Button
                android:id="@+id/btn_page_need_receive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/bg_recyclerview_item"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/dp_25"
                android:text="@string/order_need_receive"
                android:visibility="gone"
                android:textColor="@color/common_white_transparent_80"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_page_need_send" />

            <Button
                android:id="@+id/btn_page_finished"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/bg_recyclerview_item"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/dp_25"
                android:text="@string/order_finished"
                android:visibility="gone"
                android:textColor="@color/common_white_transparent_80"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_page_need_receive" />

            <Button
                android:id="@+id/btn_page_service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/bg_recyclerview_item"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/dp_25"
                android:text="@string/order_service"
                android:visibility="gone"
                android:textColor="@color/common_white_transparent_80"
                android:textSize="@dimen/sp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_page_finished" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.leanback.widget.VerticalGridView
            android:id="@+id/recycler_order_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_25"
            android:paddingLeft="@dimen/dp_27"
            android:paddingRight="@dimen/dp_27"
            android:paddingBottom="@dimen/dp_10"
            android:background="@drawable/bg_me_group_content"
            app:layout_constraintLeft_toRightOf="@id/layout_orders_home_menu"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/order_navi_right"
        android:layout_width="@dimen/drawer_menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/transparent"/>

</androidx.drawerlayout.widget.DrawerLayout>