<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_version_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_check_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_me_group_content">

        <ImageView
            android:id="@+id/iv_launcher"
            android:layout_width="@dimen/dp_105"
            android:layout_height="@dimen/dp_105"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_50"
            android:src="@drawable/ic_launcher_210"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/app_name"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toRightOf="@id/iv_launcher"
            app:layout_constraintTop_toTopOf="@id/iv_launcher" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:text="当前版本：1.8.0"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toRightOf="@id/tv_app_name"
            app:layout_constraintTop_toTopOf="@id/iv_launcher" />

        <LinearLayout
            android:id="@+id/layout_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_latest_version"
            app:layout_constraintLeft_toLeftOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name">

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:background="@drawable/settings_star" />

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/settings_star" />

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/settings_star" />

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/settings_star" />

            <View
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/settings_star" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/shape_2_ff5ee966"
                android:drawableLeft="@drawable/settings_security"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_3"
                android:paddingRight="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_3"
                android:text="@string/safety_certification"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/shape_2_ffc25ee9"
                android:drawableLeft="@drawable/settings_conntrol"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_3"
                android:paddingRight="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_3"
                android:text="@string/remote_control"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_latest_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="最新版本：1.0.9.0"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/iv_launcher"
            app:layout_constraintLeft_toLeftOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/layout_stars" />

        <Button
            android:id="@+id/btn_update_now"
            android:layout_width="@dimen/dp_178"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/shape_22_selector"
            android:drawableLeft="@drawable/settings_update"
            android:drawablePadding="@dimen/dp_7"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/dp_32"
            android:text="@string/update_now"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_16"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="@id/iv_launcher"
            app:layout_constraintTop_toBottomOf="@id/iv_launcher" />


        <Button
            android:id="@+id/btn_history_versions"
            android:layout_width="@dimen/dp_178"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/shape_22_selector"
            android:gravity="center"
            android:text="@string/history_versions"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/btn_update_now"
            app:layout_constraintTop_toBottomOf="@id/iv_launcher"
            app:layout_goneMarginLeft="0dp" />

        <Button
            android:id="@+id/btn_clear_cache"
            android:layout_width="@dimen/dp_178"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/shape_22_selector"
            android:gravity="center"
            android:text="@string/clear_cache"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toRightOf="@id/btn_history_versions"
            app:layout_constraintTop_toBottomOf="@id/iv_launcher"
            app:layout_goneMarginLeft="0dp" />

        <TextView
            android:id="@+id/tv_update_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_52"
            android:text="@string/update_detail"
            android:textColor="@color/common_white_transparent_80"
            android:textSize="@dimen/sp_16"
            app:layout_constraintLeft_toLeftOf="@id/iv_launcher"
            app:layout_constraintTop_toBottomOf="@id/btn_history_versions" />

        <TextView
            android:id="@+id/tv_update_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="1.更人性化的操作界面\n界面全新设计，清新简洁，点划之问尽享愉悦的操作体验\n\n2.体验大有不同\n耳目一新的短视频，优惠商品、关注主播、热门点赞，你要找的商品，都在CIBN\n\n3.新增蝰蛇音效\n极致丽音，由蝰蛇(VIPER)专业打造的智能均衡环绕音。更有多种预设音效，让同短视频也有不同的味道"
            android:textColor="@color/common_white_transparent_60"
            android:textSize="@dimen/sp_12"
            android:lineSpacingExtra="@dimen/dp_5"
            app:layout_constraintLeft_toLeftOf="@id/tv_update_detail_title"
            app:layout_constraintTop_toBottomOf="@id/tv_update_detail_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/version_history_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/transparent" />
</androidx.drawerlayout.widget.DrawerLayout>
